Minor Fixes (#23)
Signed-off-by: Harsh Kumar <harsh19043@iiitd.ac.in>